force-app/main/default/objects/LetterStream_Settings__c/LetterStream_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>LetterStream Settings</label>
</CustomObject>