force-app/main/default/objects/LetterStream_Settings__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <label>API_Endpoint</label>
    <length>200</length>
    <type>Text</type>
</CustomField>