force-app/main/default/objects/LetterStream_Settings__c/fields/API_Id__c.field-meta.xml
<CustomField>
    <fullName>API_Id__c</fullName>
    <label>API_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>