force-app/main/default/objects/LetterStream_Settings__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API_Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>